# plonky2-metal-demo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
shaders/: goldilocks.metal  poseidon_goldilocks.metal  poseidon_goldilocks_mds.metal  poseidon_merkle_hasher.metal  poseidon_merkle_hasher.metallib  u128.h.metal
src/: main.rs
src/gpu/metal/: mod.rs  poseidon_interleaved.rs
