[package]
name = "plonky2-metal-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
lazy_static = "1.4.0"
metal = "0.26.0"
rand = "0.8.5"
plonky2 = { git = "https://github.com/QEDProtocol/plonky2-merkle-config", rev = "4dfb8791505210408c6ed4c1e04d173ecc0e7639" }

serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_json = "1.0"
itertools = "0.10.5"